[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://addons/generate_sprite_sheet/scene/component/pending_handle/pending_handle.gd" id="1_p306e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyxa8"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rw382"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="pending_handle" type="MarginContainer"]
script = ExtResource("1_p306e")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="merge" type="Button" parent="GridContainer"]
layout_mode = 2
text = "合并选中图像"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="GridContainer/HBoxContainer/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="GridContainer" type="GridContainer" parent="GridContainer/HBoxContainer"]
layout_mode = 2
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "最大列数："
horizontal_alignment = 2

[node name="max_column" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 4.0
allow_greater = true
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="width_label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "宽度："
horizontal_alignment = 2

[node name="width" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 16384.0
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="height_label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "高度："
horizontal_alignment = 2

[node name="height" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
max_value = 16384.0
allow_greater = true
suffix = "px"
select_all_on_focus = true

[node name="space" type="Control" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "左间隔："
horizontal_alignment = 2

[node name="left_separation" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer6" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer6"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "右间隔："
horizontal_alignment = 2

[node name="right_separation" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer5" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer5"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "上间隔："
horizontal_alignment = 2

[node name="top_separation" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer11" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer11"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "下间隔："
horizontal_alignment = 2

[node name="down_separation" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer11"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer7" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer7"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "左间距："
horizontal_alignment = 2

[node name="left_margin" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer9" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer9"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "右间距："
horizontal_alignment = 2

[node name="right_margin" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer8" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer8"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "顶部间距："
horizontal_alignment = 2

[node name="top_margin" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer10" type="HBoxContainer" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="label" type="Label" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer10"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "底部间距："
horizontal_alignment = 2

[node name="down_margin" type="SpinBox" parent="GridContainer/HBoxContainer/GridContainer/HBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true
suffix = "px"
select_all_on_focus = true

[node name="Control" type="Control" parent="GridContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
mouse_filter = 2

[node name="merge_mode" type="OptionButton" parent="GridContainer/HBoxContainer/GridContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_top = 1.0
offset_right = 166.0
offset_bottom = 21.0
button_pressed = true

[node name="Control2" type="Control" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control3" type="Control" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control4" type="Control" parent="GridContainer/HBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Control2" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="resize_select" type="Button" parent="GridContainer"]
layout_mode = 2
text = "修改选中图像大小"

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="GridContainer/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rw382")

[node name="Label" type="Label" parent="GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "宽："
horizontal_alignment = 2

[node name="select_texture_width" type="SpinBox" parent="GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 32.0
allow_greater = true
suffix = "px"
select_all_on_focus = true

[node name="Label2" type="Label" parent="GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "高："
horizontal_alignment = 2

[node name="select_texture_height" type="SpinBox" parent="GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 32.0
allow_greater = true
suffix = "px"
select_all_on_focus = true

[connection signal="pressed" from="GridContainer/merge" to="." method="_on_merge_pressed"]
[connection signal="item_selected" from="GridContainer/HBoxContainer/GridContainer/Control/merge_mode" to="." method="_on_merge_mode_item_selected"]
[connection signal="pressed" from="GridContainer/resize_select" to="." method="_on_resize_select_pressed"]
